Исправила ссылки.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
       </p>
       <div class="link-wrap">
-        <a class="link">more</a>
+        <a href="#" class="link">more</a>
       </div>
     </div>
     <div class="block">
@@ -40,7 +40,7 @@
         optio cumque nihil impedit quo minus id quod maxime placeat facere possimus.
       </p>
       <div class="link-wrap">
-        <a class="link">more</a>
+        <a href="#" class="link">more</a>
       </div>
     </div>
     <div class="block">
@@ -55,10 +55,11 @@
         eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet.
       </p>
       <div class="link-wrap">
-        <a class="link">more</a>
+        <a href="#" class="link">more</a>
       </div>      
     </div>
   </main>
 </body>
+
 
 </html>
